--- a/client/src/app/modals/question-modal.component.html
+++ b/client/src/app/modals/question-modal.component.html
@@ -3,30 +3,33 @@
 
     <mat-step>
       <ng-template matStepLabel>Área</ng-template>
-      <mat-form-field>
+      <mat-form-field id="selectArea">
         <mat-select [(ngModel)]="selectedCategory" (selectionChange)="categoryChanged()" placeholder="Selecione a área">
           <mat-option *ngFor="let c of categories" [value]="c">
             {{ c }}
           </mat-option>
         </mat-select>
       </mat-form-field>
-      <mat-form-field style="width: 100%">
-        <input matInput [disabled]="!customCategory" [(ngModel)]="question.category" placeholder="Qual a área da questão ?" required />
+      <mat-form-field id="customArea" style="width: 100%">
+        <input matInput [disabled]="!customCategory" [(ngModel)]="question.category" placeholder="Qual a área da questão ?" required
+        />
       </mat-form-field>
       <div class="action-button">
         <button mat-button mat-dialog-close>Cancelar</button>
-        <button [disabled]="customCategory && !question.category" mat-raised-button matStepperNext color="primary">Próximo</button>
+        <button (click)="stepChange(0)" id="btnNextStep" [disabled]="customCategory && !question.category" mat-raised-button matStepperNext
+          color="primary">Próximo</button>
       </div>
     </mat-step>
 
     <mat-step>
-      <ng-template matStepLabel>Pergunda</ng-template>
-      <mat-form-field style="width: 100%">
-        <input matInput [(ngModel)]="question.description" placeholder="Qual a pergunta da questão ?" required />
+      <ng-template matStepLabel>Pergunta</ng-template>
+      <mat-form-field id="questionDescription" style="width: 100%">
+        <input id="inputQuestionDescription" matInput [(ngModel)]="question.description" placeholder="Qual a pergunta da questão ?"
+          required />
       </mat-form-field>
       <div class="action-button">
         <button mat-button matStepperPrevious>Voltar</button>
-        <button [disabled]="!question.description" mat-raised-button matStepperNext color="primary">Próximo</button>
+        <button (click)="stepChange(1)" [disabled]="!question.description" mat-raised-button matStepperNext color="primary">Próximo</button>
       </div>
     </mat-step>
 
@@ -34,14 +37,17 @@
       <ng-template matStepLabel>Alternativas</ng-template>
       <mat-list>
         <h3 mat-subheader>Alternativas</h3>
+        <div style="width:100%;text-align: right; color:#666;font-size: 12px">Correta?</div>
         <mat-list-item *ngFor="let a of question.answers">
           <button mat-mini-fab disabled>{{a.classification}}</button>
           <span class="horizontal-space"></span>
           <mat-form-field style="width: 100%">
-            <input matInput [(ngModel)]="a.description" placeholder="Descrição da alternativa {{a.classification}}" required />
+            <input matInput class="introDescriptionAnswer" [(ngModel)]="a.description" placeholder="Descrição da alternativa {{a.classification}}"
+              required />
           </mat-form-field>
           <span class="horizontal-space"></span>
-          <mat-slide-toggle (click)="correctClick(a)" [matTooltip]="a.correct ? 'Correta' : 'Errada'" color="primary" [(ngModel)]="a.correct"></mat-slide-toggle>
+          <mat-slide-toggle class="introCorrectAnswer" (click)="correctClick(a)" [matTooltip]="a.correct ? 'Correta' : 'Errada'" color="primary"
+            [(ngModel)]="a.correct"></mat-slide-toggle>
         </mat-list-item>
       </mat-list>
 
@@ -51,6 +57,6 @@
           mat-raised-button color="primary" (click)="saveQuestion()">PRONTO</button>
       </div>
     </mat-step>
-    
+
   </mat-horizontal-stepper>
 </div>
