Adicionando swagger para documentação da api

--- a/client/src/app/room/edit-room/edit-room.component.html
+++ b/client/src/app/room/edit-room/edit-room.component.html
@@ -10,7 +10,7 @@
       <span class="app-spacer"></span>
       <span class="app-spacer"></span>
       <mat-form-field style="margin-left: 50px; width: 220px">
-        <input type="tel" maxlength="3" mask matInput [(ngModel)]="room.time" placeholder="Tempo de cada questão (segundos)" required/>
+        <input type="tel" maxlength="3" mask matInput [(ngModel)]="room.time" placeholder="Tempo de cada questão. Ex.: '30'" required/>
       </mat-form-field>
     </div>
 
