--- a/client/src/app/questions/all-questions/all-questions.component.html
+++ b/client/src/app/questions/all-questions/all-questions.component.html
@@ -12,9 +12,9 @@
           <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="category">
+        <ng-container matColumnDef="area">
           <th style="width: 100px" mat-header-cell *matHeaderCellDef> Área </th>
-          <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.category}} </td>
+          <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.area}} </td>
         </ng-container>
 
         <ng-container matColumnDef="description">
