--- a/client/src/app/modals/room-question-modal.component.html
+++ b/client/src/app/modals/room-question-modal.component.html
@@ -16,9 +16,9 @@
   <div [hidden]="!hasQuestions || allSelected ">
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width: 100%">
 
-      <ng-container matColumnDef="category">
+      <ng-container matColumnDef="area">
         <th mat-header-cell *matHeaderCellDef> Área </th>
-        <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.area}} </td>
       </ng-container>
 
       <ng-container matColumnDef="description">
