--- a/client/src/app/room/edit-room/edit-room.component.html
+++ b/client/src/app/room/edit-room/edit-room.component.html
@@ -33,9 +33,9 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="category">
+      <ng-container matColumnDef="area">
         <th mat-header-cell *matHeaderCellDef> Área </th>
-        <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.area}} </td>
       </ng-container>
 
       <ng-container matColumnDef="description">
