--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -22,16 +22,20 @@
         <button [disabled]="path === '/signup'" mat-button routerLink="/signup">Cadastre-se</button>
       </div>
       <div [hidden]="!logged" style="margin-right: 20px; margin-top: -10px">
+
         <button mat-icon-button (click)="updateTimeNotifications()" [matMenuTriggerFor]="notificationMenu">
           <mat-icon [matBadge]="notifPendings" [matBadgeHidden]="notifPendings == 0" matBadgeColor="warn">notifications</mat-icon>
         </button>
-        <button matTooltip="Tutorial Completo" mat-icon-button (click)="help()">
+
+        <button matTooltip="Tutoriais" mat-icon-button [matMenuTriggerFor]="helpMenu">
           <mat-icon>help</mat-icon>
         </button>
+
         <button mat-icon-button [matMenuTriggerFor]="accountMenu">
           <img style="background-color: white;border-radius: 50%;box-shadow: 0 0 15px #999" height="60" width="60" src="{{user?.picture || 'api/image/user-image.png'}}"
           />
         </button>
+
         <mat-menu #notificationMenu="matMenu" style="overflow: hidden;">
           <span class="no-content-message" [hidden]="notifications.length > 0">Sem notificações</span>
           <mat-divider></mat-divider>
@@ -56,6 +60,22 @@
             <a (click)="removeAllnotifications()" href="javascript:void(0)">Remover Todas</a>
           </div>
         </mat-menu>
+
+        <mat-menu #helpMenu="matMenu" style="overflow: hidden">
+          <button mat-menu-item>
+            <mat-icon color="primary">dialpad</mat-icon>
+            <span>Menus</span>
+          </button>
+          <button mat-menu-item>
+            <mat-icon color="primary">question_answer</mat-icon>
+            <span>Criar questão</span>
+          </button>
+          <button mat-menu-item>
+            <mat-icon color="primary">school</mat-icon>
+            <span>Criar sala</span>
+          </button>
+        </mat-menu>
+
         <mat-menu #accountMenu="matMenu">
           <div class="account-data" style="padding: 10px">
             <div fxLayout="row">
@@ -76,6 +96,7 @@
             </div>
           </div>
         </mat-menu>
+
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
