--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -23,15 +23,15 @@
       </div>
       <div [hidden]="!logged" style="margin-right: 20px; margin-top: -10px">
 
-        <button mat-icon-button (click)="updateTimeNotifications()" [matMenuTriggerFor]="notificationMenu">
+        <button id="btnMenuNotification" mat-icon-button (click)="updateTimeNotifications()" [matMenuTriggerFor]="notificationMenu">
           <mat-icon [matBadge]="notifPendings" [matBadgeHidden]="notifPendings == 0" matBadgeColor="warn">notifications</mat-icon>
         </button>
 
-        <button matTooltip="Tutoriais" mat-icon-button [matMenuTriggerFor]="helpMenu">
+        <button id="btnMenuTutorial" matTooltip="Tutoriais" mat-icon-button [matMenuTriggerFor]="helpMenu">
           <mat-icon>help</mat-icon>
         </button>
 
-        <button mat-icon-button [matMenuTriggerFor]="accountMenu">
+        <button id="btnMenuAccount" mat-icon-button [matMenuTriggerFor]="accountMenu">
           <img style="background-color: white;border-radius: 50%;box-shadow: 0 0 15px #999" height="60" width="60" src="{{user?.picture || 'api/image/user-image.png'}}"
           />
         </button>
@@ -62,15 +62,15 @@
         </mat-menu>
 
         <mat-menu #helpMenu="matMenu" style="overflow: hidden">
-          <button mat-menu-item>
+          <button mat-menu-item (click)="help('main')">
             <mat-icon color="primary">dialpad</mat-icon>
             <span>Menus</span>
           </button>
-          <button mat-menu-item>
+          <button mat-menu-item (click)="help('question')">
             <mat-icon color="primary">question_answer</mat-icon>
             <span>Criar questão</span>
           </button>
-          <button mat-menu-item>
+          <button mat-menu-item (click)="help('room')">
             <mat-icon color="primary">school</mat-icon>
             <span>Criar sala</span>
           </button>
