--- a/client/src/app/room/my-rooms/my-rooms.component.html
+++ b/client/src/app/room/my-rooms/my-rooms.component.html
@@ -50,8 +50,8 @@
         </ng-container>
 
         <ng-container matColumnDef="seconds">
-          <th mat-header-cell *matHeaderCellDef> Tempo </th>
-          <td mat-cell *matCellDef="let element"> {{element.time}} </td>
+          <th mat-header-cell *matHeaderCellDef> Duração </th>
+          <td mat-cell *matCellDef="let element"> {{element.time * element.questions.length}}s </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
@@ -77,8 +77,9 @@
               (click)="remove(element)">
               <mat-icon color="warn">delete</mat-icon>
             </button>
-            <button *ngIf="element.status === 'ENDED'" mat-raised-button color="primary" (click)="remove(element)">
-              PONTUAÇÕES
+            <button mat-icon-button (click)="openScores(element)" *ngIf="element.status === 'ENDED'" mat-raised-button matTooltip="PONTUAÇÕES"
+              mat-raised-button>
+              <mat-icon color="primary">poll</mat-icon>
             </button>
           </td>
         </ng-container>
