--- a/client/src/app/room/opened-rooms/opened-rooms.component.html
+++ b/client/src/app/room/opened-rooms/opened-rooms.component.html
@@ -35,7 +35,7 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
           <td mat-cell *matCellDef="let element" style="width: 180px">
-            <button mat-button color="primary" (click)="associate(element)">
+            <button mat-raised-button color="primary" (click)="associate(element)">
               {{element.associate ? 'DEIXAR' : 'PARTICIPAR' }}
             </button>
           </td>
