--- a/client/src/app/modals/room-question-modal.component.html
+++ b/client/src/app/modals/room-question-modal.component.html
@@ -14,11 +14,22 @@
   </div>
 
   <div [hidden]="!hasQuestions || allSelected ">
+
+    <mat-form-field style="width: 50%">
+      <mat-icon style="color:gray;margin-top: 5px" matSuffix>search</mat-icon>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Pesquisar">
+    </mat-form-field>
+
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width: 100%">
 
       <ng-container matColumnDef="area">
         <th mat-header-cell *matHeaderCellDef> Área </th>
         <td mat-cell *matCellDef="let element"> {{element.area}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef> Categoria </th>
+        <td mat-cell *matCellDef="let element"> {{element.category}} </td>
       </ng-container>
 
       <ng-container matColumnDef="description">
