--- a/client/src/app/questions/all-questions/all-questions.component.html
+++ b/client/src/app/questions/all-questions/all-questions.component.html
@@ -5,6 +5,12 @@
       <span>Nenhuma questão foi encontrada.</span>
     </div>
     <div class="question-component" [hidden]="!hasQuestions">
+
+      <mat-form-field style="width: 50%">
+        <mat-icon style="color:gray;margin-top: 5px" matSuffix>search</mat-icon>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Pesquisar">
+      </mat-form-field>
+
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
         <ng-container matColumnDef="id">
@@ -17,9 +23,28 @@
           <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.area}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="category">
+          <th style="width: 100px" mat-header-cell *matHeaderCellDef> Categoria </th>
+          <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.category}} </td>
+        </ng-container>
+
         <ng-container matColumnDef="description">
           <th mat-header-cell *matHeaderCellDef> Descrição </th>
           <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="answers">
+          <th mat-header-cell *matHeaderCellDef> Alternativas </th>
+          <td mat-cell *matCellDef="let element"> {{element.answers.length}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef> Ações </th>
+          <td mat-cell *matCellDef="let element">
+            <button matTooltip="Obter questão" mat-icon-button mat-raised-button (click)="getSharedQuestion(element.id)">
+              <mat-icon color="primary">get_app</mat-icon>
+            </button>
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
