--- a/client/src/app/questions/my-questions/my-questions.component.html
+++ b/client/src/app/questions/my-questions/my-questions.component.html
@@ -5,20 +5,31 @@
       <span>Você não possui questões.</span>
     </div>
     <div class="question-component">
-      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" [hidden]="!hasQuestions">
+
+      <mat-form-field style="width: 50%">
+        <mat-icon style="color:gray;margin-top: 5px" matSuffix>search</mat-icon>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Pesquisar">
+      </mat-form-field>
+
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [hidden]="!hasQuestions">
 
         <ng-container matColumnDef="id">
-          <th style="width: 100px" mat-header-cell *matHeaderCellDef mat-sort-header> Número </th>
+          <th style="width: 100px" mat-header-cell *matHeaderCellDef> Número </th>
           <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
 
         <ng-container matColumnDef="area">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Área </th>
+          <th mat-header-cell *matHeaderCellDef> Área </th>
           <td mat-cell *matCellDef="let element"> {{element.area}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="category">
+          <th mat-header-cell *matHeaderCellDef> Categoria </th>
+          <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+        </ng-container>
+
         <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Descrição </th>
+          <th mat-header-cell *matHeaderCellDef> Descrição </th>
           <td mat-cell *matCellDef="let element"> {{element.description}} </td>
         </ng-container>
 
