--- a/client/src/app/room/edit-room/edit-room.component.html
+++ b/client/src/app/room/edit-room/edit-room.component.html
@@ -2,27 +2,24 @@
   <mat-card-title>{{room.name}}</mat-card-title>
   <div [hidden]="loading">
     <div>
-      <mat-form-field>
+      <mat-form-field id="roomName">
         <input matInput [(ngModel)]="room.name" maxlength="255" placeholder="Nome da sala" required />
       </mat-form-field>
-      <span class="app-spacer"></span>
-      <span class="app-spacer"></span>
-      <span class="app-spacer"></span>
-      <span class="app-spacer"></span>
-      <mat-form-field style="margin-left: 50px; width: 220px">
-        <input type="tel" maxlength="3" mask matInput [(ngModel)]="room.time" placeholder="Tempo de cada questão. Ex.: '30'" required/>
+      <mat-form-field id="roomTime" style="margin-left: 50px; width: 160px">
+        <input type="tel" maxlength="3" mask matInput [(ngModel)]="room.time" placeholder="Tempo de cada questão" required/>
       </mat-form-field>
+      <span style="margin-left: 20px;color:#666" *ngIf="room.time > 0 && room.questions && room.questions.length">Duração da sala: {{room.time * room.questions.length}} segundos</span>
     </div>
 
-    <div class="question-component" [hidden]="hasQuestions">
+    <div class="question-component" style="margin-top: 30px" [hidden]="hasQuestions">
       <span>Sala sem questões.</span>
     </div>
 
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" [hidden]="!hasQuestions" style="width: 100%">
 
       <ng-container matColumnDef="order">
-        <th mat-header-cell *matHeaderCellDef> Ordem </th>
-        <td mat-cell *matCellDef="let element;let rIndex = index">
+        <th mat-header-cell *matHeaderCellDef style="width: 100px"> Ordem </th>
+        <td mat-cell *matCellDef="let element;let rIndex = index" style="width: 100px">
           <div>
             <i class="up" (click)="changeIndex(rIndex, -1)" *ngIf="rIndex > 0"></i>
           </div>
@@ -36,6 +33,11 @@
       <ng-container matColumnDef="area">
         <th mat-header-cell *matHeaderCellDef> Área </th>
         <td mat-cell *matCellDef="let element"> {{element.area}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef> Categoria </th>
+        <td mat-cell *matCellDef="let element"> {{element.category}} </td>
       </ng-container>
 
       <ng-container matColumnDef="description">
@@ -57,9 +59,11 @@
       </ng-container>
 
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Ações</th>
-        <td mat-cell *matCellDef="let element;let rIndex = index">
-          <button mat-button color="warn" (click)="remove(element)">REMOVER</button>
+        <th mat-header-cell *matHeaderCellDef style="width: 100px">Ações</th>
+        <td mat-cell *matCellDef="let element;let rIndex = index" style="width: 100px">
+          <button matTooltip="REMOVER" mat-icon-button mat-raised-button (click)="remove(element)">
+            <mat-icon color="warn">close</mat-icon>
+          </button>
         </td>
       </ng-container>
 
@@ -68,8 +72,11 @@
     </table>
     <br />
     <div class="action-button">
-      <button style="margin: 10px" mat-raised-button color="primary" (click)="openQuestionModal()">ADICIONAR QUESTÕES</button>
-      <mat-form-field>
+      <button id="addQuestionRoom" matTooltip="Adicionar Questões" style="margin: 10px" mat-raised-button (click)="openQuestionModal()">
+        <mat-icon color="primary">add_circle</mat-icon>
+        ADICIONAR QUESTÕES
+      </button>
+      <mat-form-field id="selOrderQuestions">
         <mat-select [(ngModel)]="orderOption" (selectionChange)="orderOptionChanged()" placeholder="Ordenação">
           <mat-option *ngFor="let c of orderOptions" [value]="c.value">
             {{ c.description }}
@@ -78,7 +85,7 @@
       </mat-form-field>
     </div>
     <div class="action-button">
-      <button [disabled]="!room.name || !room.time" mat-raised-button color="primary" (click)="saveRoom()">SALVAR</button>
+      <button [disabled]="!room.name || !(room.time > 0)" mat-raised-button color="primary" (click)="saveRoom()">SALVAR</button>
     </div>
   </div>
   <div *ngIf="loading" class="loading">
