Adicionado gráfico para feedback de acertos

--- a/client/src/app/room/quiz/quiz.component.css
+++ b/client/src/app/room/quiz/quiz.component.css
@@ -90,7 +90,7 @@
 
 .time-over { color: #5f9ed4; }
 
-.sent { color: blue; }
+.sent { color: #666; }
 .unavailable {
   text-align: center;
   font-size: 28px;
