--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar-row>
       <span class="qr-logo">QR</span>
       <span class="app-spacer"></span>
-      <button [disabled]="path === '/' || path === 'resume'" routerLink="/" mat-button>Home</button>
+      <!-- <button [disabled]="path === '/' || path === 'resume'" routerLink="/" mat-button>Home</button> -->
       <!-- <button [disabled]="path === '/about'" routerLink="/about" mat-button>Sobre</button> -->
       <span class="app-spacer"></span>
       <span class="app-spacer"></span>
