Ajuste na globalização

--- a/client/angular/src/app/app.component.html
+++ b/client/angular/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div fxFlex="200px" class="sidenav" [hidden]="!logged">
       <mat-nav-list>
         <mat-list-item id="menu-scores">
-          <button [disabled]="path === '/resume'" mat-raised-button color="primary" routerLink="/resume">PONTUAÇÕES</button>
+          <button style="margin: 20px" [disabled]="path === '/resume'" mat-raised-button color="primary" routerLink="/resume">PONTUAÇÕES</button>
         </mat-list-item>
         <mat-divider></mat-divider>
         <mat-list-item id="menu-my-questions">
